testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=596) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L1193(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=597) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#334 = spawn use_ref(r): type#334: type#334
  await(task): nothing
  return
}

borrow edges:
  L1195(r) (&) borrows L1194(x) at 0:87-89 scope=S5
events:
  borrow_start L1195(r) -> L1194(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L1195(r) -> L1194(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L1195(r) -> L1194(x) scope=S5 note="scope_end B1"
move plan:
  L1194(x): MoveCopy (copy type)
  L1195(r): MoveForbidden (spawn escape)
  L1196(task): MoveNeedsDrop (non-copy (drop))

